--- a/src/main/resources/templates/administrativo/home.html
+++ b/src/main/resources/templates/administrativo/home.html
@@ -1,75 +1,106 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Página Inicial</title>
-    <!-- Incluindo o Bootstrap -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <title>Meg Kids - Administrativo</title>
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+          integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+          integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+          crossorigin="anonymous" referrerpolicy="no-referrer" />
+
     <style>
         body {
-            background-color: #f8f9fa;
-            color: #333;
+            background-color: #fff0f5;
         }
-        h1 {
-            color: #e83e8c; /* Cor rosa para o padrão da loja */
-        }
+
         .navbar {
-            background-color: #e83e8c; /* Rosa claro */
+            background-color: #f06292;
         }
-        .navbar a {
-            color: white;
-            padding: 10px 15px;
-            text-decoration: none;
+
+        .navbar .navbar-brand {
+            font-weight: bold;
         }
-        .navbar a:hover {
-            background-color: #d6336c; /* Um tom de rosa mais escuro */
+
+        .list-group-item.active {
+            background-color: #f06292;
+            border-color: #f06292;
+        }
+
+        .list-group-item:hover {
+            background-color: #f8bbd0;
+            color: #000;
+        }
+
+        h1 {
+            color: #f06292;
+            font-weight: bold;
+        }
+
+        .logo-img {
+            width: 30px;
+            height: 30px;
+            margin-right: 10px;
         }
     </style>
 </head>
+
 <body>
-<!-- Barra de navegação com Bootstrap -->
-<nav class="navbar navbar-expand-lg navbar-light">
-    <div class="container-fluid">
-        <a class="navbar-brand" href="#">Sistema Administrativo</a>
-        <div class="collapse navbar-collapse">
-            <ul class="navbar-nav ms-auto">
-                <li class="nav-item">
-                    <a class="nav-link" href="/cadastroEndereco">Cadastrar Endereço</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/listarEndereco">Listar Endereços</a>
-                </li>
-                <!-- Links para outras entidades -->
-                <li class="nav-item">
-                    <a class="nav-link" href="/cadastroProduto">Cadastrar Produto</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/listarProduto">Listar Produtos</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/cadastroPedido">Cadastrar Pedido</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/listarPedido">Listar Pedidos</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/cadastroUsuario">Cadastrar Usuário</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/listarUsuario">Listar Usuários</a>
-                </li>
-            </ul>
-        </div>
-    </div>
+
+<nav class="navbar navbar-expand-lg navbar-dark">
+    <img src="https://cdn-icons-png.flaticon.com/512/1998/1998610.png" class="logo-img" alt="Logo Meg Kids">
+    <a class="navbar-brand" href="#">Meg Kids - Administrativo</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarMenu"
+            aria-controls="navbarMenu" aria-expanded="false" aria-label="Alternar navegação">
+        <span class="navbar-toggler-icon"></span>
+    </button>
 </nav>
 
-<div class="container mt-5">
-    <h1>Bem-vindo ao Sistema Administrativo</h1>
-    <p class="lead">Aqui você pode gerenciar os endereços, produtos, pedidos e usuários da sua loja Meg Kids.</p>
+<div class="container-fluid">
+    <div class="row">
+        <!-- MENU LATERAL -->
+        <div class="col-md-3">
+            <ul class="list-group mt-3">
+                <li class="list-group-item active"><i class="fa-solid fa-gears"></i> Funcionalidades</li>
+                <a href="/cadastroPedido"><li class="list-group-item">Cadastrar Pedido</li></a>
+                <a href="/listarPedido"><li class="list-group-item">Listar Pedidos</li></a>
+                <a href="/cadastroProduto"><li class="list-group-item">Cadastrar Produto</li></a>
+                <a href="/listarProduto"><li class="list-group-item">Listar Produtos</li></a>
+
+                <li class="list-group-item active"><i class="fa-solid fa-user-plus"></i> Cadastro de Pessoas</li>
+                <a href="/cadastroUsuario"><li class="list-group-item">Cadastrar Usuário</li></a>
+                <a href="/listarUsuario"><li class="list-group-item">Listar Usuários</li></a>
+                <a href="/cadastroEndereco"><li class="list-group-item">Cadastrar Endereço</li></a>
+                <a href="/listarEndereco"><li class="list-group-item">Listar Endereços</li></a>
+            </ul>
+        </div>
+
+        <!-- CONTEÚDO PRINCIPAL -->
+        <div class="col-md-9 mt-4">
+            <h1>Bem-vindo ao Painel Administrativo</h1>
+            <p class="lead">Gerencie seus produtos, pedidos e usuários com facilidade.</p>
+            <p>Sistema desenvolvido para a loja <strong>Meg Kids</strong>.</p>
+        </div>
+    </div>
 </div>
 
-<!-- Incluindo o script do Bootstrap -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+<!-- Scripts JS -->
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
+        integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+        crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
+        integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
