--- a/src/main/resources/templates/administrativo/itempedido/cadastro.html
+++ b/src/main/resources/templates/administrativo/itempedido/cadastro.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cadastrar Item de Pedido - Meg Kids</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
     <style>
         body {
             background-color: #f8f9fa;
@@ -28,6 +29,12 @@
     <div class="header text-center">
         <h1>Cadastrar Item de Pedido - Meg Kids</h1>
     </div>
+
+    <!-- Botão Voltar para Início -->
+    <a href="/" class="btn btn-outline-secondary mt-3 mb-3">
+        <i class="fa-solid fa-house"></i> Voltar para Início
+    </a>
+
     <form action="/salvarItemPedido" method="POST">
         <div class="mb-3">
             <label for="pedidoItem" class="form-label">Pedido</label>
@@ -51,6 +58,7 @@
         <a href="/listarItemPedido" class="btn btn-secondary">Cancelar</a>
     </form>
 </div>
+
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
